# config-wp

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.test  README.md
.github/workflows/: ci.yml
cmake/: FreeRTOSConfig.h
docs/: ARCHITECTURE.md  DESIGN.md  GAPS.md  MODULES.md  README.md  UART_SIM.md  scratchpad.txt
examples/: config.json  config_bad_values.json  config_forward_compat.json  config_malformed.json  config_partial.json
src/: config_print.c  config_print.h  external_comms.c  external_comms.h  main.c
src/application/: CMakeLists.txt  config.c  config.h  config_codec.c  config_codec.h  config_defaults.c  config_defaults.h  config_json.c  config_json.h  config_limits.h  config_lock.h  config_lock_freertos.c  config_lock_pthread.c  config_slot.c  config_slot.h  config_types.h  crc32.c  crc32.h  eeprom_manager.c  eeprom_manager.h  tlv.c  tlv.h
src/drivers/: CMakeLists.txt  storage.c  storage.h  uart_sim.c  uart_sim.h
tests/: CMakeLists.txt  test_config.cpp  test_config_codec.cpp  test_config_concurrency.cpp  test_config_json.cpp  test_crc32.cpp  test_slot.cpp  test_storage.cpp  test_tlv.cpp  test_types.cpp
